--- a/services/realtime/package.json
+++ b/services/realtime/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "start": "node --loader tsx src/index.ts"
   },
   "dependencies": {
     "@inlko/shared": "workspace:*",
