css changes and added chat features

--- a/apps/web/.env
+++ b/apps/web/.env
@@ -2,8 +2,8 @@ VITE_TURN_URL=turn:120.16.146.84:3478
 VITE_STUN_URL=stun:120.16.146.84:3478
 VITE_TURN_USERNAME=inlko
 VITE_TURN_CREDENTIAL=Z3braSage!84Kite
-VITE_REALTIME_URL=ws://localhost:8080
+#VITE_REALTIME_URL=ws://localhost:8080
 #VITE_REALTIME_URL=ws://172.20.10.3:8080
-#VITE_REALTIME_URL=ws://inklo.onrender.com
+VITE_REALTIME_URL=ws://inklo.onrender.com
 # Debug logs (set to "true" in local dev; turn off or remove in production)
-VITE_DEBUG_LOGS=true
+VITE_DEBUG_LOGS=false
